<resources>
    <string name="app_name">Green Kiondo</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Tile names -->
    <string name="breakfast">B R E A K F A S T</string>
    <string name="dinner_lunch">D I N N E R/ L U N C H</string>
    <string name="dessert">D E S S E R T</string>
    <string name="drinks">D R I N K S</string>
    <string name="beef_chicken">B E E F/ C H I C K E N</string>
    <string name="pasta">P A S T A</string>
    <string name="vegetarian">V E G E T A R I A N</string>
    <string name="seafood">S E A F O O D</string>
    <string name="mykiondo">M Y  K I O N D O</string>
    <string name="browse">B R O W S E</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>

    <string name="banner_home_footer">ca-app-pub-7745024037057843/1270147089</string>
    <string name="interstitial_fullscreen">ca-app-pub-7745024037057843/7584273991</string>

    <string name="instructions">View  Instructions</string>
    <string name="getLocnCheckout">Get Location &amp; Proceed to Checkout</string>

    <string name="progress_text">Loading Recipes...</string>
    <string name="progress_text_ingredients">Loading Ingredients...</string>

</resources>
